--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,7 +1,4 @@
-:root {
-  --main-bg-color: #ffffff;
-  --main-text-color: #000000;
-}
+@import "/app/style/variables.scss";
 
 * {
   box-sizing: border-box;
@@ -16,8 +13,8 @@ body {
 }
 
 body {
-  background-color: var(--main-bg-color);
-  color: var(--main-text-color);
+  background-color: $main-bg-color;
+  color: $main-text-color;
   font-size: 16px;
   letter-spacing: 0.02em;
 }
