--- a/app/ui/Container/Container.module.scss
+++ b/app/ui/Container/Container.module.scss
@@ -1,17 +1,19 @@
+@import "/app/style/variables.scss";
+
 .container {
   max-width: 100%;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
   margin: 0 auto;
 
-  @media screen and (min-width: 768px) {
-    max-width: 768px;
+  @media screen and (min-width: $tablet-size) {
+    max-width: $tablet-size;
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  @media screen and (min-width: 1280px) {
-    max-width: 1280px;
+  @media screen and (min-width: $desctop-size) {
+    max-width: $desctop-size;
     padding-left: 15px;
     padding-right: 15px;
   }
