--- a/app/ui/Section/Section.module.scss
+++ b/app/ui/Section/Section.module.scss
@@ -1,13 +1,15 @@
+@import "/app/style/variables.scss";
+
 .section {
   padding-top: 20px;
   padding-bottom: 20px;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet-size) {
     padding-top: 40px;
     padding-bottom: 40px;
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $desctop-size) {
     padding-top: 60px;
     padding-bottom: 60px;
   }
