--- a/app/ui/Header/Header.module.scss
+++ b/app/ui/Header/Header.module.scss
@@ -47,7 +47,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
+  z-index: 5;
   background-color: transparent;
   border: none;
 
