--- a/app/style/variables.scss
+++ b/app/style/variables.scss
@@ -5,4 +5,8 @@ $desctop-size: 1280px;
 
 $main-bg-color: #ffffff;
 $main-text-color: #000000;
-$accient-color: #00d1ff;
+/* $accient-color: #00d1ff; */
+
+$primaryLightColor: #ffffff;
+$accentColor: #076b81;
+$accentColorOpacity: #076b8180;
