--- a/app/ui/Header/Header.module.scss
+++ b/app/ui/Header/Header.module.scss
@@ -34,7 +34,7 @@
   transition: 350ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
   &:is(:hover, :focus) {
-    color: $accient-color;
+    color: $accentColor;
   }
 
   @media screen and (min-width: $desctop-size) {
