--- a/app/globals.scss
+++ b/app/globals.scss
@@ -14,7 +14,7 @@ body {
 
 body {
   background-color: $main-bg-color;
-  color: $main-text-color;
+  color: $mainTextColor;
   font-size: 16px;
   letter-spacing: 0.02em;
 }
