--- a/app/style/variables.scss
+++ b/app/style/variables.scss
@@ -4,7 +4,8 @@ $desctop-size: 1280px;
 /* colors */
 
 $main-bg-color: #ffffff;
-$main-text-color: #000000;
+$mainTextColor: #000000;
+
 /* $accient-color: #00d1ff; */
 
 $primaryLightColor: #ffffff;
